fix(fe): resolve text wrapping issue in 'Add New Flavour' button

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -330,6 +330,7 @@ input:checked + .slider:before {
     cursor: pointer;
     transform: scale(1);
     transition: all 0.2s ease;
+    white-space: nowrap;
     /* min-width: 1; */
     padding-left: 6%;
     padding-right: 6%;
